# sample-py-cli

./: README.md  pyproject.toml
src/sample_py_cli/: cli.py
